[package]
name = "hdn-cache-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
confy = "0.5.1"
log = { version = "0.4" }
postcard = { version = "1.0.2", features = ["use-std"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sled = "0.34.7"
tokio = { version = "1", features = ["full"] }
